# ehr-data-software-tool

./: .coverage  .travis.yml  LICENSE  README.md  ehr.db  ehr_analysis.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ehr.db
.github/workflows/: python-app.yml  tests.yml
tests/: test.py  test_data1.txt  test_data2.txt  test_data3.txt  test_data4.txt  test_data5.txt  test_ehr.py
