[metadata]
name = ehr
description = ehr data tool
author = Scott Sun
license = MIT
license_file = LICENSE
platform = any
classifiers = 
    Programing Language :: Python :: 3.7
    Programing Language :: Python :: 3.8
    Programing Language :: Python :: 3.9
    Programing Language :: Python :: 3.10

[option]
package = 
    ehr
install_requires = 
    pytest
    mypy
    pycodestyle
    pydocstyle
    black
python_requires = >=3.7
package_dir = 
    src
zip_safe = no

[options.extra_require]
testing = 
    pytest
    pytest-cov
    mypy
    pycodestyle
    pydocstyle
    black


[option.package_data]
ehr_tool = py.typed

[pycodestyle]
max-line-length = 119
