[metadata]
name = ehr
description = ehr data tool
author = Scott Sun
license = MIT
license_file = LICENSE
platform = any
classifiers = 
    Programing Language :: Python :: 3.10

[option]
package = 
    ehr
install_requires = 
    pytest
    mypy
    pycodestyle
    pydocstyle
    black
python_requires = >=3.10
package_dir = 
    src
zip_safe = no

[options.extras_require]
testing = 
    pytest-cov
    
[options.package_data]
ehr = py.typed

[pycodestyle]
max-line-length = 119
